--- a/app/src/main/res/layout/fragment_signup_email.xml
+++ b/app/src/main/res/layout/fragment_signup_email.xml
@@ -49,7 +49,8 @@
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toStartOf="@+id/guideline_signup_email_end_56dp"
             app:layout_constraintStart_toStartOf="@+id/text_signup_email_label"
-            app:layout_constraintTop_toBottomOf="@+id/text_signup_email_label" />
+            app:layout_constraintTop_toBottomOf="@+id/text_signup_email_label"
+            bind:emailValidation="@={vm.email}"/>
 
         <Button
             android:id="@+id/btn_signup_email_confirm"
