--- a/app/src/main/res/layout/fragment_signup_pwd.xml
+++ b/app/src/main/res/layout/fragment_signup_pwd.xml
@@ -50,7 +50,8 @@
             app:boxBackgroundColor="@android:color/transparent"
             app:layout_constraintEnd_toStartOf="@+id/guideline_signup_pwd_end_56dp"
             app:layout_constraintStart_toStartOf="@+id/text_signup_pwd_label"
-            app:layout_constraintTop_toBottomOf="@+id/text_signup_pwd_label" />
+            app:layout_constraintTop_toBottomOf="@+id/text_signup_pwd_label"
+            bind:passwordValidation="@={vm.password}"/>
 
 
         <TextView
@@ -74,7 +75,8 @@
             android:inputType="textPassword"
             app:layout_constraintEnd_toStartOf="@+id/guideline_signup_pwd_end_56dp"
             app:layout_constraintStart_toStartOf="@+id/text_signup_pwd_label"
-            app:layout_constraintTop_toBottomOf="@+id/text_signup_pwd_label_confirm" />
+            app:layout_constraintTop_toBottomOf="@+id/text_signup_pwd_label_confirm"
+            bind:passwordVerification="@={vm.passwordVerification}"/>
 
 
         <Button
