--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -53,6 +53,17 @@
                 app:layout_constraintStart_toStartOf="@id/img_login_logo"
                 app:layout_constraintTop_toBottomOf="@id/img_login_logo" />
 
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/btn_login_facebook"
+                android:layout_width="240dp"
+                android:layout_height="40dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:layout_marginBottom="24dp"
+                app:layout_constraintStart_toStartOf="@id/constraint_login_btn_container"
+                app:layout_constraintEnd_toEndOf="@id/constraint_login_btn_container"
+                app:layout_constraintBottom_toTopOf="@id/constraint_login_btn_container"/>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraint_login_btn_container"
                 android:layout_width="240dp"
