--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/coordinator_home_container"
+        android:id="@+id/constraint_home_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -22,7 +20,6 @@
                 android:id="@+id/ctoolbar_home"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:paddingVertical="4dp"
                 app:layout_scrollFlags="scroll|enterAlways">
 
                 <com.google.android.material.appbar.MaterialToolbar
@@ -31,94 +28,37 @@
                     android:layout_height="48dp"
                     app:layout_collapseMode="parallax" />
 
-                <LinearLayout
-                    android:id="@+id/linear_home_search_innercontainer"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginHorizontal="12dp"
-                    android:background="@drawable/edit_search_background"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/img_home_search"
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginEnd="8dp"
-                        android:src="@drawable/ic_search"
-                        app:tint="#999999" />
-
-                    <EditText
-                        android:id="@+id/edit_home_search"
-                        style="@style/Body"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:layout_weight="1"
-                        android:hint="검색어를 입력해주세요."
-                        android:imeOptions="actionSearch"
-                        android:inputType="text"
-                        android:maxLines="1"
-                        bind:searchEditText="@{null}" />
-
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/text_home_title"
+                    style="@style/AppbarTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:text="@string/app_name"/>
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
-
         </com.google.android.material.appbar.AppBarLayout>
 
+        <TextView
+            android:id="@+id/text_home_label_popular"
+            style="@style/Label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_home_label_popular"
+            android:textSize="24sp"
+            android:paddingTop="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/appbar_home"/>
+
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_home"
+            android:id="@+id/recycler_home_popular"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="3"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/appbar_home"
-            tools:listitem="@layout/item_home" />
-
-        <ImageView
-            android:id="@+id/img_home_nosearch"
-            android:layout_width="192dp"
-            android:layout_height="192dp"
-            android:src="@drawable/ic_nosearch"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.3"
-            app:tint="@color/gray" />
-
-        <TextView
-            android:id="@+id/text_home_nosearch_head"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingVertical="16dp"
-            android:text="@string/text_home_nosearch"
-            android:textColor="@color/gray"
-            android:textSize="24sp"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/img_home_nosearch" />
-
-        <TextView
-            android:id="@+id/text_home_nosearch_subhead"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/text_home_nosearch_subhead"
-            android:textColor="@color/gray"
-            android:textSize="20sp"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_home_nosearch_head"/>
-
+            app:layout_constraintTop_toBottomOf="@id/text_home_label_popular"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
