--- a/app/src/main/res/layout/fragment_login_email.xml
+++ b/app/src/main/res/layout/fragment_login_email.xml
@@ -75,7 +75,7 @@
         android:layout_height="48dp"
         android:text="@string/btn_login_email_confirm"
         android:layout_marginTop="200dp"
-        app:backgroundTint="@color/selected"
+        app:backgroundTint="@color/secondaryDarkColor"
         app:layout_constraintEnd_toStartOf="@+id/guideline_login_email_end_56dp"
         app:layout_constraintStart_toStartOf="@+id/guideline_login_email_start_56dp"
         app:layout_constraintTop_toBottomOf="@id/edit_login_email_email"
