--- a/app/src/main/res/layout/fragment_root.xml
+++ b/app/src/main/res/layout/fragment_root.xml
@@ -28,10 +28,21 @@
         style="@style/RippleEffect"
         android:layout_width="0dp"
         android:layout_height="48dp"
+        android:padding="12dp"
         android:src="@drawable/ic_home"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/img_root_search"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <ImageView
+        android:id="@+id/img_root_search"
+        style="@style/RippleEffect"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:src="@drawable/ic_search"
         android:padding="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/img_root_home"
         app:layout_constraintEnd_toStartOf="@id/img_root_user"/>
 
     <ImageView
@@ -43,6 +54,6 @@
         android:src="@drawable/ic_user"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/img_root_home"/>
+        app:layout_constraintStart_toEndOf="@id/img_root_search"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
