--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,39 +29,38 @@
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="Head" parent="android:TextAppearance">
-        <item name="android:textSize">20sp</item>
+    <style name="AppbarTitle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/primaryTextColor</item>
-        <item name="android:includeFontPadding">false</item>
-    </style>
-
-    <style name="HeadBold" parent="android:TextAppearance">
-        <item name="android:textSize">20sp</item>
-        <item name="android:textColor">@color/primaryTextColor</item>
-        <item name="android:includeFontPadding">false</item>
-    </style>
-
-    <style name="SubHeadBold" parent="android:TextAppearance">
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/primaryTextColor</item>
-        <item name="android:includeFontPadding">false</item>
-    </style>
-
-    <style name="SubHead" parent="android:TextAppearance">
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/primaryTextColor</item>
-        <item name="android:includeFontPadding">false</item>
-    </style>
-
-    <style name="Label">
+        <item name="android:gravity">center</item>
         <item name="android:paddingStart">16dp</item>
-        <item name="android:paddingEnd">8dp</item>
-        <item name="android:paddingBottom">12dp</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="BackArrow" parent="android:TextAppearance">
+    <style name="Head">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/primaryTextColor</item>
+    </style>
+
+    <style name="HeadBold">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="SubHeadBold">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="SubHead">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="BackArrow">
         <item name="android:layout_width">48dp</item>
         <item name="android:layout_height">48dp</item>
         <item name="android:padding">16dp</item>
@@ -69,25 +68,50 @@
         <item name="android:src">@drawable/ic_back</item>
     </style>
 
-    <style name="Link">
-        <item name="android:paddingStart">16dp</item>
-        <item name="android:paddingEnd">8dp</item>
-        <item name="android:paddingBottom">12dp</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">12sp</item>
-    </style>
-
-    <style name="Title">
+    <style name="BookTitle">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:lines">2</item>
         <item name="android:paddingStart">16dp</item>
         <item name="android:paddingEnd">16dp</item>
-        <item name="android:paddingBottom">12dp</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="BookTitleSmall">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:lines">2</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="Label">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
     </style>
 
-    <style name="BottomSheetHead" parent="android:TextAppearance">
+    <style name="BookInfoLabel">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="BottomSheetHead">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:layout_width">240dp</item>
@@ -98,14 +122,8 @@
         <item name="android:paddingBottom">24dp</item>
     </style>
 
-    <style name="Description">
-        <item name="android:paddingTop">12dp</item>
-        <item name="android:textSize">12sp</item>
-        <item name="android:textColor">@color/black</item>
-    </style>
-
     <style name="Body">
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/primaryTextColor</item>
         <item name="android:textSize">12sp</item>
     </style>
 </resources>
