--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -30,7 +30,9 @@
         tools:layout="@layout/fragment_login_email">
         <action
             android:id="@+id/action_loginEmailFragment_to_rootFragment"
-            app:destination="@id/rootFragment" />
+            app:destination="@id/rootFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -42,7 +44,9 @@
             app:destination="@id/loginEmailFragment" />
         <action
             android:id="@+id/action_loginFragment_to_rootFragment"
-            app:destination="@id/rootFragment" />
+            app:destination="@id/rootFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_loginFragment_to_signupFragment"
             app:destination="@id/signupFragment" />
@@ -57,7 +61,9 @@
         tools:layout="@layout/fragment_signup">
         <action
             android:id="@+id/action_signupFragment_to_rootFragment"
-            app:destination="@id/rootFragment" />
+            app:destination="@id/rootFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/facebookUsernameFragment"
@@ -66,6 +72,8 @@
         tools:layout="@layout/fragment_facebook_username">
         <action
             android:id="@+id/action_facebookUsernameFragment_to_rootFragment"
-            app:destination="@id/rootFragment" />
+            app:destination="@id/rootFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
