--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,6 +53,7 @@
             android:id="@+id/recycler_home_popular"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:paddingHorizontal="16dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="3"
             app:layout_constraintStart_toStartOf="parent"
