--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,6 +50,7 @@
 
     <style name="SubHeadBold">
         <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/primaryTextColor</item>
         <item name="android:includeFontPadding">false</item>
     </style>
