--- a/app/src/main/res/drawable/btn_login.xml
+++ b/app/src/main/res/drawable/btn_login.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
         android:radius="4dp" />
-    <solid android:color="@color/btn_email" />
+    <solid android:color="@color/secondaryColor" />
 </shape>
