--- a/app/src/main/res/layout/fragment_edit_category.xml
+++ b/app/src/main/res/layout/fragment_edit_category.xml
@@ -69,7 +69,7 @@
         android:textColor="@color/black"
         android:visibility="invisible"
         style="@style/RippleEffect"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="@color/secondaryColor"
         app:layout_constraintVertical_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
